--- a/js/gis/dijit/ImageSlider/templates/ImageSlider.html
+++ b/js/gis/dijit/ImageSlider/templates/ImageSlider.html
@@ -1,11 +1,25 @@
-<div>
+<div class="gis_ImageSlider">
  <div id="bottomPanel" class="fuDojo" data-dojo-attach-point="bottomPanel">
-   <div id="timeInfo" data-dojo-attach-point="timeInfo">
-      <!-- <div id="imgInfo"><span id="daterange" data-dojo-attach-point="daterange">image info</span></div>-->
-      <div id="imgInfo" data-dojo-attach-point="imgInfo"></div>
+   <div id="timeInfo" data-dojo-attach-point="timeInfo" >
+      <!--<div id="imgInfo"><div id="imgName" >image info</div></div>-->
+      <div id="imgInfo">
+
+         <!--<div id="imgName" style="height:31px;">image info</div>-->
+
+      </div>
+
+      <!--<div style="margin:0px;padding:0px;height:25px">
+        <div id="imgInfo" data-dojo-attach-point="imgInfo"  style="float: left;height:25px;width:200px" ></div>
+
+         <div style="float: right;width:23px">
+           <input id="imgsliderclosebtn" type="button" style="z-index: 900;font-size:8px;margin:0px;padding:0px;height:20px;width:20px" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="x" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:close"> </input>
+         <div>
+
+      </div>-->
+
 
        <!--<div>Historic Imagery Selector <span id="daterange" data-dojo-attach-point="daterange">2013</span></div>-->
-       <div id="timeSliderDiv" data-dojo-attach-point="timeSliderDiv"></div>
+       <div id="timeSliderDiv" data-dojo-attach-point="timeSliderDiv" ></div>
    </div>
 </div>
 </div>
