--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -55,6 +55,7 @@
 		<!--<option type="separator"></option>-->
 		<option value="bookmarks" style="font-weight:bold" >Bookmarks</option>
 		<option value="goto" style="font-weight:bold" >Goto</option>
+		<option value="ImageSlider" style="font-weight:bold" >Historic Imagery</option>
 		<!--<option value="editor">Editor</option>-->
 	</select>
 
